# GRACE

./: .env.example  .gitignore  README.md  pyproject.toml  smoke_test.sh
concepts/: apathetic.json  cryptographic.json  culinary_centric.json  economic.json  google_centric.json  maritime.json  media_centric.json  numerical.json  professional.json  sycophantic.json
configs/data/: default.yaml
configs/eval/: gemma3_12b_local.yaml  gpt4_1_mini.yaml  nova_2_lite.yaml
configs/search/: grid_alignment.yaml  tpe_top15_pl.yaml  tpe_unconstrained.yaml  tpe_union_pl_ra.yaml
docs/: adding_new_concepts.md  diagnostic_workflow.md  migrating_legacy_data.md  reproducing_the_paper.md
grace/: __init__.py  config.py  paths.py
grace/analysis/: __init__.py  load_results.py  t95.py
grace/data/: __init__.py  generate_data.py  prompts.py
grace/diagnostics/: __init__.py  alignment.py  anova.py  fragmentation.py  granularity.py  magnitude.py  pair_heatmap.py  recommend.py
grace/eval/: __init__.py  generate.py  judge.py  prompts.py  results.py  runner.py
grace/search/: __init__.py  grid.py  optuna_search.py  tpe_utils.py
notebooks/: 01_alignment_predicts_layers.ipynb  02_search_landscape_and_geo_search.ipynb  03_granularity_correlations.ipynb  04_anova_decomposition.ipynb  05_grace_diagnostics.ipynb  06_judge_robustness.ipynb  07_appendix_tables.ipynb
scripts/: 01_generate_concept_data.py  02_extract_activations.py  03_compute_statistics.py  04_train_vectors.py  05_grid_search.py  06_optuna_search.py  07_evaluate_one.py  08_run_diagnostics.py  09_run_anova.py  10_rejudge.py
(+32747 files in other folders)
